# efficiently-serving-llms

./: .env.example  .gitignore  Dockerfile  Lesson_2-Batching.ipynb  Lesson_4-Quantization.ipynb  Lesson_6-Multi-LoRA.ipynb  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: results_template.md  run_benchmark.py
docs/: architecture.md  audit.md  benchmarking.md  design_decisions.md  troubleshooting.md
examples/: generate_text.py
notebooks/: README.md
src/efficient_llm_serving/: __init__.py  batching.py  benchmarking.py  config.py  dependencies.py  generation.py  lora.py  quantization.py
tests/: test_batching.py  test_benchmarking.py  test_imports.py  test_quantization.py
